ADD: font-family, footer, box-sizing

--- a/index.html
+++ b/index.html
@@ -2,17 +2,33 @@
 <html>
 <head>
 	<title>Las locuras del Emperador!</title>
+	<link rel="stylesheet" type="text/css" href="assets/css/fonts.css">
 	<meta charset="utf-8">
 	<style type="text/css">
-		h1{color: yellow}
+		h1{
+			font-family: "El Rio Lobo";
+			color: yellow;
+		}
 		p{color:white;}
+		*{
+			margin: 0px;
+			padding: 0px;
+			box-sizing: border-box;
+		}
+		footer{
+			font-family: "El Rio Lobo";
+			font-size: 70px;
+			color: black;
+			text-align: center;
+			padding: 20px
+		}
 	</style>
 </head>
 <body>
-	<div style="background-color: #A1243A; text-align: center; padding: 20px" >
+	<header style="background-color: #A1243A; text-align: center; padding: 20px" >
 		<h1>Las locuras del Emperador!</h1>
 		<p>Nuestra primera página web</p>
-	</div>
+	</header>
 	<div style="background-color: #218ABE; ">
 		<img style="padding: 20px; " src="assets/images/cuzco.jpg" alt="Emperador">
 	</div>
@@ -24,8 +40,12 @@
 		<p>El veneno de Cuzco</p>
 		<p>claro...</p>
 		<p>Ese veneno</p>
-		
-		
 	</div>
+	<footer>
+		Precios<br>
+		- $10.00<br>
+		µ $25.00<br>
+		© $35.00<br>
+	</footer>
 </body>
 </html>
