--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<meta charset="utf-8">
 	<style type="text/css">
 		h1{
-			font-family: "El Rio Lobo";
-			color: yellow;
+			font-family: "El Rio Lobo";color: orange;
+			padding-bottom: 10px
 		}
 		p{color:white;}
 		*{
@@ -15,37 +15,58 @@
 			padding: 0px;
 			box-sizing: border-box;
 		}
-		footer{
-			font-family: "El Rio Lobo";
-			font-size: 70px;
-			color: black;
-			text-align: center;
-			padding: 20px
+		header{
+			background-color: #A1243A; text-align: center; 
+			padding: 40px; height: 150px
 		}
+		#foto{
+			background-color: #218ABE;
+			text-align: center;
+		}
+		#fondo-bruja{
+			background-image: url(assets/images/cuzco2.jpg);
+			background-size: cover ;
+		}
+		footer{
+			font-family: "El Rio Lobo"; font-size: 70px; color: black;
+			padding: 20px; 
+		}
+
 	</style>
 </head>
 <body>
-	<header style="background-color: #A1243A; text-align: center; padding: 20px" >
+	<header>
 		<h1>Las locuras del Emperador!</h1>
 		<p>Nuestra primera página web</p>
 	</header>
-	<div style="background-color: #218ABE; ">
-		<img style="padding: 20px; " src="assets/images/cuzco.jpg" alt="Emperador">
-	</div>
-	<div style="background-image: url(assets/images/cuzco2.jpg);text-align: right; ">
-		<h1>Cuzco!!</h1>
-		<p>Oo,sí...el veneno...</p>
-		<p>El veneno para Cuzco...</p>
-		<p>El veneno que usaremos para matar a Cuzco</p>
-		<p>El veneno de Cuzco</p>
-		<p>claro...</p>
-		<p>Ese veneno</p>
-	</div>
-	<footer>
+	<main>
+		<section id="foto">
+
+			<img style="padding: 20px; " src="assets/images/cuzco.jpg" alt="Emperador">
+
+		</section>
+
+		<section id="fondo-bruja">
+
+			<div style="text-align: right; height: 300px">
+				<h1>Cuzco!!</h1>
+				<p>Oo,sí...el veneno...</p>
+				<p>El veneno para Cuzco...</p>
+				<p>El veneno que usaremos para matar a Cuzco</p>
+				<p>El veneno de Cuzco</p>
+				<p>claro...</p>
+				<p>Ese veneno</p>
+			</div>
+
+		</section>
+	</main>
+	<footer style="text-align: center;">
 		Precios<br>
-		- $10.00<br>
-		µ $25.00<br>
-		© $35.00<br>
+		<div style="padding-right: 150px;"><!shift left text>
+			- $10.00<br>
+			µ $25.00<br>
+			© $35.00<br>
+		</div>
 	</footer>
 </body>
 </html>
