ADD: fix Prices section with margin

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	</main>
 	<footer style="text-align: center;">
 		Precios<br>
-		<div style="padding-right: 150px;"><!shift left text>
+		<div style="text-align: left; margin-left: 20%">
 			- $10.00<br>
 			µ $25.00<br>
 			© $35.00<br>
